# pyton_webcrm_client

./: LICENSE  MANIFEST.in  README.md  run_tests.sh  setup.cfg
src/webcrm/: api.py  exceptions.py
tests/: test_get.py
webcrm/: api.py  decorators.py  exceptions.py  helpers.py
