[metadata]
name = python_webcrm_client
version = 0.0.2
description = Simple python api connector for webcrm.
long_description = file: README.md
url = https://www.tweave.tech
author = Tweave Tech
author_email = team@tweave.tech
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    requests >= 2.0
